--- a/src/app/module/login/login.component.html
+++ b/src/app/module/login/login.component.html
@@ -20,20 +20,21 @@
         </p>
       </form>
     <!-- Register -->
-    <form *ngIf="activeForm === 'register'" [formGroup]="registerForm" (ngSubmit)="register()">
-        <h2>Register</h2>
-        <div class="form-group">
-          <input type="text" formControlName="username" placeholder="Username" />
-        </div>
-        <div class="form-group">
-          <input type="email" formControlName="email" placeholder="Email" />
-        </div>
-        <div class="form-group">
-          <input type="password" formControlName="password" placeholder="Password" />
-        </div>
-        <button type="submit">Register</button>
-        <p (click)="toggleForm('login')">Already have an account?
-          <span class="highlighted">Login</span>
-        </p>
-      </form>
+<form *ngIf="activeForm === 'register'" [formGroup]="registerForm" (ngSubmit)="register()">
+  <h2>Register</h2>
+  <div class="form-group">
+    <input type="text" formControlName="userName" placeholder="Username" />
+  </div>
+  <div class="form-group">
+    <input type="email" formControlName="email" placeholder="Email" />
+  </div>
+  <div class="form-group">
+    <input type="password" formControlName="password" placeholder="Password" />
+  </div>
+  <button type="submit">Register</button>
+  <p (click)="toggleForm('login')">Already have an account?
+    <span class="highlighted">Login</span>
+  </p>
+</form>
+
 </div>
